--- a/package.json
+++ b/package.json
@@ -13,16 +13,25 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@mui/material": "^6.1.2",
+    "@react-icons/all-files": "^4.1.0",
     "@reduxjs/toolkit": "^2.2.7",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.7",
+    "chart.js": "^4.4.5",
     "crypto-js": "^4.2.0",
     "flowbite": "^2.5.2",
     "flowbite-react": "^0.10.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
+    "pdf-lib": "^1.17.1",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-icon": "^1.0.0",
+    "react-icons": "^5.3.0",
     "react-loading-indicators": "^1.0.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
